Añadir footer copyright

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
       <p id="msg"></p>
     </form>
   </main>
-
+  <footer class="footer">
+    © 2026 Campamento MSA · Todos los derechos reservados
+  </footer>
   <script src="form.js"></script>
 </body>
 </html>
