Añadir bloque informativo inicial

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 <body>
   <main class="container">
     <h1>RESERVA DE PLAZA – CAMPA MSA 2026</h1>
-    <p class="note">Esta es únicamente la reserva de plaza.</p>
+
+    <div class="intro">
+      <p><strong>IMPORTANTE:</strong> Esta es únicamente la reserva de plaza. La inscripción no será definitiva hasta que se realice el segundo pago y se entregue toda la documentación requerida.<br>
+      Antes de rellenar este formulario, lee la CIRCULAR INFORMATIVA 2026.</p>
+
+      <p>📍 DÓNDE: Escuela de Hostelería (Santuario) Ntra. Sra. de Guayente, Sahún (Huesca)</p>
+      <p>📅 CUÁNDO: Del 18 al 29 de julio de 2026 (ambos inclusive)</p>
+      <p>💶 PRECIO: El precio total de la actividad será de 460 €.</p>
+
+      <p><strong>CIRCULAR:</strong> &lt;PENDIENTE&gt;</p>
+
+      <p><strong>DUDAS:</strong> MSACampamento@gmail.com<br>
+      @MSACampamento (Instagram y Facebook)</p>
+    </div>
+
 
     <form id="f">
       <h2>Datos de contacto</h2>
