Modificacion JS para separar special_notes por kid1 y kid2

--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
           <label>Otras enfermedades o información médica relevante (segundo acampado)*
             <textarea name="medical2_notes"></textarea>
           </label>
+          
+          <label>¿Nos dejamos algo? (opcional)
+            <textarea name="special2_notes" placeholder="Cuéntanos cualquier detalle que debamos saber (opcional)"></textarea>
+          </label>
+
         </section>
 
       </div>
