Ajustes consentimientos legales y validación backend

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 
         <!-- INFO MÉDICA 2º HERMANO (tarjeta) -->
         <section class="card">
-          <h2>Información médica del segundo acampado</h2>
+          <h2>Información médica del segundo hermano/a</h2>
 
           <fieldset>
-            <legend>Alergias / intolerancias (segundo acampado)*</legend>
+            <legend>Alergias / intolerancias (segundo/a hermano/a)*</legend>
             <label class="inline"><input type="checkbox" name="allergies2" value="Cereales"> Cereales</label>
             <label class="inline"><input type="checkbox" name="allergies2" value="Frutos secos"> Frutos secos</label>
             <label class="inline"><input type="checkbox" name="allergies2" value="Gluten"> Gluten</label>
@@ -215,32 +215,32 @@
         <h2>AVISOS IMPORTANTES</h2>
 
         <div class="legal">
-          <p>🏥 Información médica:<br>
+          <p><strong>🏥 Información médica:</strong><br>
           El Campamento MSA no se hace responsable de información médico-sanitaria no indicada en esta autorización.<br>
           Solo se atenderán alergias o intolerancias diagnosticadas y comunicadas.<br>
           No se aceptarán preferencias personales (vegano, vegetariano, etc.) ni “nuevas alergias” surgidas durante las comidas menos populares.<br>
           Se respetarán únicamente las restricciones alimentarias religiosas indicadas previamente.<br>
           Existe una ración mínima obligatoria. Ante alergias comunicadas, se ofrecerán alternativas seguras.</p>
 
-          <p>🌦️ Cambios por causas externas:<br>
+          <p><strong>🌦️ Cambios por causas externas:</strong><br>
           Las actividades pueden modificarse debido a condiciones climáticas u otras causas medioambientales.</p>
 
-          <p>🚫 Sustancias prohibidas:<br>
+          <p><strong>🚫 Sustancias prohibidas:</strong><br>
           Prohibida la tenencia y consumo de: bebidas energéticas, alcohol, tabaco y otras sustancias psicoactivas.<br>
           El incumplimiento supondrá la expulsión de la actividad.</p>
 
-          <p>📵 Dispositivos electrónicos:<br>
+          <p><strong>📵 Dispositivos electrónicos:</strong><br>
           Prohibida la tenencia y el uso de: móviles, smartwatches o dispositivos con llamadas o internet.<br>
           Si se usan, serán retirados y devueltos al finalizar la actividad. No nos hacemos responsables de pérdidas o daños.</p>
 
-          <p>💳 Devolución de pagos:<br>
+          <p><strong>💳 Devolución de pagos:</strong><br>
           El pago del Campamento MSA no es reembolsable, salvo causa de fuerza mayor justificada.<br>
           En caso de cancelación del Campamento MSA por motivos de fuerza mayor, el pago será reembolsado total o parcialmente, dependiendo de la fecha de cancelación.</p>
 
-          <p>🎯 Plazas limitadas:<br>
+          <p><strong>🎯 Plazas limitadas:</strong><br>
           La actividad tienen un cupo limitado y pueden requerir selección según disponibilidad.</p>
 
-          <p>🚨 Traslado en caso de expulsión:<br>
+          <p><strong>🚨 Traslado en caso de expulsión:</strong><br>
           En caso de expulsión, la familia deberá hacerse cargo del traslado inmediato del acampado/a, ya sea recogiéndolo personalmente o asumiendo el coste del transporte necesario.</p>
         </div>
 
