Ajustes consentimientos legales y validación backend

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <label class="inline"><input type="checkbox" name="allergies2" value="NINGUNA"> NINGUNA</label>
           </fieldset>
 
-          <label>Otras enfermedades o información médica relevante (segundo acampado)*
+          <label>Otras enfermedades o información médica relevante (segundo/a hermano/a)*
             <textarea name="medical2_notes"></textarea>
           </label>
           
