Confirmación envío, anti-duplicados y consentimientos obligatorios

--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
       @MSACampamento (Instagram y Facebook)</p>
     </section>
 
+    <!-- ✅ VISTA DE CONFIRMACIÓN (oculta por defecto) -->
+    <section id="successView" class="card" style="display:none;">
+      <h2 id="successTitle">Reserva enviada</h2>
+      <p id="successText"></p>
+
+      <div class="legal" style="margin-top:10px;">
+        <p><strong>Resumen:</strong></p>
+        <ul>
+          <li><span id="successEmail"></span></li>
+          <li><span id="successOrigin"></span></li>
+          <li><span id="successKids"></span></li>
+        </ul>
+      </div>
+
+      <div class="legal" style="margin-top:10px;">
+        <p><strong>Si tienes dudas:</strong> escribe a <strong>MSACampamento@gmail.com</strong> indicando el correo utilizado y la procedencia.</p>
+      </div>
+
+      <button type="button" id="newReservationBtn">Hacer otra reserva</button>
+    </section>
+
     <form id="f">
 
       <!-- DATOS DE CONTACTO -->
