Modificacion de la ventan de confirmacion de registro

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul>
           <li><span id="successEmail"></span></li>
           <li><span id="successOrigin"></span></li>
-          <li><span id="successKids"></span></li>
+          <li><span id="successStatus"></span></li>
         </ul>
       </div>
 
