feat: separar datos de contacto en madre y padre obligatorios

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <p><strong>IMPORTANTE:</strong> Esta es únicamente la reserva de plaza. La inscripción no será definitiva hasta que se realice el segundo pago y se entregue toda la documentación requerida.<br>
       Antes de rellenar este formulario, lee la CIRCULAR INFORMATIVA 2026.</p>
 
-      <p>📍 DÓNDE: Escuela de Hostelería (Santuario) Ntra. Sra. de Guayente, Sahún (Huesca)</p>
-      <p>📅 CUÁNDO: Del 18 al 29 de julio de 2026 (ambos inclusive)</p>
-      <p>💶 PRECIO: El precio total de la actividad será de 460 €.</p>
+      <p><strong>📍 DÓNDE:</strong> Escuela de Hostelería (Santuario) Ntra. Sra. de Guayente, Sahún (Huesca)</p>
+      <p><strong>📅 CUÁNDO:</strong> Del 18 al 29 de julio de 2026 (ambos inclusive)</p>
+      <p><strong>💶 PRECIO:</strong> 460 €.</p>
 
       <p><strong>CIRCULAR:</strong> &lt;PENDIENTE&gt;</p>
 
@@ -54,8 +54,9 @@
       <!-- DATOS DE CONTACTO -->
       <section class="card">
         <h2>Datos de contacto</h2>
-        <label>Correo* <input name="email" type="email" required></label>
-        <label>Nombre y apellidos (madre/padre/tutor)* <input name="parent_name" required></label>
+        <label>Correo* <input name="email" type="email" required></label>        
+        <label>Nombre y apellidos (madre/tutora)* <input name="parent_name_mother" required></label>
+        <label>Nombre y apellidos (padre/tutor)* <input name="parent_name_father" required></label>
         <label>Teléfonos* <input name="phones" required></label>
         <label>Otro contacto <input name="other_contact"></label>
       </section>
@@ -81,14 +82,15 @@
         <label>Procedencia*
           <select name="origin" required>
             <option value="">Selecciona…</option>
-            <option>Alagon</option>
-            <option>Borja</option>
-            <option>Canal</option>
-            <option>Guadalajara</option>
-            <option>Villacruz</option>
-            <option>FSA</option>
+            <option value="Alagon">Alagón</option>
+            <option value="Borja">Borja</option>
+            <option value="Canal">Canal</option>
+            <option value="Guadalajara">Guadalajara</option>
+            <option value="Villacruz">Villacruz</option>
+            <option value="FSA">FSA</option>
           </select>
         </label>
+
       </section>
 
       <!-- INFORMACIÓN MÉDICA (1º ACAMPADO) -->
@@ -202,32 +204,35 @@
         </section>
 
       </div>
-
+    
       <!-- PROTECCIÓN DE DATOS (texto íntegro) -->
       <section class="card">
         <h2>Información básica de Protección de Datos</h2>
 
         <div class="legal">
-          <p><strong>Responsable del tratamiento:</strong></p>
-          <p>Provincia Nuestra Señora del Pilar de la Congregación de Hermanas de la Caridad de Santa Ana, a partir de ahora, Pronvincia NSP (CIF: R5001005G, C/ Santa Catalina, nº8, 50001, Zaragoza, correo electrónico ambitos@gmail.com y MSACampamento@gmail.com).</p>
 
-          <p><strong>Finalidad:</strong></p>
-          <p>Gestionar la participación de los alumnos en las actividades del Campamento de Verano MSA, a partir de ahora Campamento MSA, incluyendo la organización, desarrollo y control de dichas actividades, así como la comunicación con las familias. Los datos médicos serán tratados únicamente para garantizar la seguridad y bienestar del participante. Además, gestionar el consentimiento para el uso de imágenes y vídeos en el ámbito interno y, en su caso, para la difusión en redes sociales o medios de comunicación.</p>
+        <p><strong>Responsable del tratamiento:</strong><br>
+        Provincia Nuestra Señora del Pilar de la Congregación de Hermanas de la Caridad de Santa Ana, a partir de ahora, Pronvincia NSP (CIF: R5001005G, C/ Santa Catalina, nº8, 50001, Zaragoza, correo electrónico ambitos@gmail.com y MSACampamento@gmail.com).</p>
 
-          <p><strong>Legitimación:</strong></p>
-          <p>La base legal para el tratamiento es el mantenimiento de relación contractual, consentimiento expreso de los padres, madres o tutores legales del menor, y el cumplimiento de las obligaciones legales. El tratamiento de los datos de salud (alergias e intolerancias) está legitimado por ser necesario para proteger intereses vitales del participante.</p>
+        <p><strong>Finalidad:</strong><br>
+        Gestionar la participación de los alumnos en las actividades del Campamento MSA, incluyendo la organización, desarrollo y control de dichas actividades, así como la comunicación con las familias. Los datos médicos serán tratados únicamente para garantizar la seguridad y bienestar del participante. Además, gestionar el consentimiento para el uso de imágenes y vídeos en el ámbito interno y, en su caso, para la difusión en redes sociales o medios de comunicación.</p>
 
-          <p><strong>Destinatarios:</strong></p>
-          <p>No se cederán datos a terceros, salvo obligación legal (por ejemplo, centros sanitarios en caso de urgencia médica) o consentimiento expreso para la difusión de imágenes en medios o redes sociales.</p>
+        <p><strong>Legitimación:</strong><br>
+        La base legal para el tratamiento es el mantenimiento de relación contractual, consentimiento expreso de los padres, madres o tutores legales del menor, y el cumplimiento de las obligaciones legales. El tratamiento de los datos de salud (alergias e intolerancias) está legitimado por ser necesario para proteger intereses vitales del participante.</p>
 
-          <p><strong>Derechos:</strong></p>
-          <p>Tienes derecho a acceder, rectificar y suprimir los datos, así como otros derechos como la limitación del tratamiento y la portabilidad de los datos. Para ejercerlos, puedes contactar al responsable en la dirección o correo electrónico indicados.</p>
+        <p><strong>Destinatarios:</strong><br>
+        No se cederán datos a terceros, salvo obligación legal (por ejemplo, centros sanitarios en caso de urgencia médica) o consentimiento expreso para la difusión de imágenes en medios o redes sociales.</p>
 
-          <p><strong>Conservación:</strong></p>
-          <p>Los datos se conservarán mientras dure la relación con el Campamento de Verano MSA y durante los plazos legalmente exigidos. Las imágenes y vídeos publicados con consentimiento se mantendrán hasta que se revoque dicho consentimiento.</p>
+        <p><strong>Derechos:</strong><br>
+        Tienes derecho a acceder, rectificar y suprimir los datos, así como otros derechos como la limitación del tratamiento y la portabilidad de los datos. Para ejercerlos, puedes contactar al responsable en la dirección o correo electrónico indicados.</p>
 
-          <p><strong>Medidas de seguridad:</strong></p>
-          <p>La Provincia NSP ha adoptado las medidas técnicas y organizativas necesarias para garantizar la seguridad y confidencialidad de los datos personales tratados.</p>
+        <p><strong>Conservación:</strong><br>
+        Los datos se conservarán mientras dure la relación con el Campamento MSA y durante los plazos legalmente exigidos. Las imágenes y vídeos publicados con consentimiento se mantendrán hasta que se revoque dicho consentimiento.</p>
+
+        <p><strong>Medidas de seguridad:</strong><br>
+        La Provincia NSP ha adoptado las medidas técnicas y organizativas necesarias para garantizar la seguridad y confidencialidad de los datos personales tratados.</p>
+        </div>
+
         </div>
 
         <fieldset>
